--- a/app/src/main/res/layout/fragment_third_cart.xml
+++ b/app/src/main/res/layout/fragment_third_cart.xml
@@ -6,7 +6,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#0D0D0D"
-    tools:context=".ThirdFragmentCart">
+    tools:context=".ThirdFragmentCart"
+    app:navGraph="@navigation/nav_graph"
+    android:name="androidx.navigation.fragment.NavHostFragment"
+    app:defaultNavHost="true">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardViewTitulo"
